<resources>
    <string name="app_name">Mayas Food</string>
    <string name="get_start">Get Start</string>
    <string name="no_title"> </string>

    <string name="Splash_title">Maya\'s</string>
    <string name="Splash_Subtitle">Garden &amp; Juice Bar</string>
    <string name="GetStart_Title">Maya\'s</string>
    <string name="GetStart_SubTitle">Garden &amp; Juice Bar</string>
    <string name="GetStart_Heading">Cooking our dishes with love for you</string>
    <string name="GetStart_ButtonTxt">Get Start</string>
    <string name="Register_title">Create New \nAccount</string>
    <string name="Register_Subtitle">Join us and enjoy your food</string>
    <string name="Register_userName">Enter fullname or Email</string>
    <string name="Register_userPhone">Enter mobile number</string>
    <string name="Register_ButtonTxt">Sign Up</string>
    <string name="Register_Skip">Skip</string>
    <string name="Login_title">Login with \nMobile Number</string>
    <string name="Login_subTitle">We will send you a confirmation code</string>
    <string name="Login_EditTxt">Enter mobile number</string>
    <string name="Login_button_txt">Sign In</string>
    <string name="Login_newUser">New User ?</string>
    <string name="Login_signup">\tSignup</string>
    <string name="OTP_Title">Enter code \nsent to your Number</string>
    <string name="OTP_subTitle">We have sent the code verification</string>
    <string name="OTP_Buttontxt">Submit</string>
    <string name="OTP_resend">Resend code in</string>
    <string name="OTP_submit">Submit</string>
    <string name="OTP_Buttonresend">Resend</string>
    <string name="Dashboard_title">Hello</string>
    <string name="Dashboard_popular">Popular Food</string>
    <string name="Dashboard_offers">Best Offers</string>
    <string name="Dashboard_restchoice">Restaurant Choices</string>
    <string name="Dashboard_seeAll">See all</string>


    <string-array name="Food_txt">
        <item>Breakfast</item>
        <item>Porridge</item>
        <item>Seafood</item>
        <item>Healthy</item>
        <item>Sides</item>
        <item>Appetizers</item>
        <item>Lunch &amp; Dinner</item>
        <item>Soup</item>
    </string-array>
    <string-array name="Food_name">
        <item>Pepper Shrimp</item>
        <item>Jerk Jackfruit</item>
        <item>Calamari</item>
    </string-array>
    <string-array name="Food_option">
        <item>(Head On or Head Off)</item>
        <item>(With rice and peas)</item>
        <item>(Cut into rings)</item>
    </string-array>
    <string-array name="Food_price">
        <item>$12</item>
        <item>$5</item>
        <item>$12</item>
    </string-array>
    <string-array name="Name_Food">
        <item>Green Salad</item>
        <item>Egg and Salad</item>
        <item>Vegetable Soup</item>
    </string-array>
    <string-array name="Food_op">
        <item>(Veggies of your choice)</item>
        <item>(Fresh Eggs)</item>
        <item>(Hot and Sour)</item>
    </string-array>
    <string-array name="Food_rate">
        <item>$5</item>
        <item>$15</item>
        <item>$7</item>
    </string-array>

    <string-array name="Offer_txt">
        <item>Looking for a new summer Food? Get 25% off our new Recipe. Place an order before April 25 2022</item>
        <item>New summer Offer! Get 25% off. 7 Day’s Left</item>
        <item>Looking for a new summer outfit? Get 50% off our new recipe. Place an order before 1 March</item>
    </string-array>

    <string-array name="Offer_img">
        <item>https://i.postimg.cc/VNk523np/image-2.png</item>
        <item>https://i.postimg.cc/FFMd1CXk/001–1–1.jpg</item>
        <item>https://i.postimg.cc/2Sq6C4V8/002–1.png</item>
    </string-array>

    <string-array name="NotifyToday_txt">
        <item>Fusce sed congue leo. Praesent eleifend, ipsum a bibendum feugia...</item>
        <item>Fusce sed congue leo. Praesent eleifend, ipsum..... </item>
        <item>Fusce sed congue leo. Praesent eleifend, ipsum a bibendum .....</item>
    </string-array>

    <string-array name="NotifyYesterday_txt">
        <item>Fusce sed congue leo. Praesent eleifend,</item>
        <item>Fusce sed congue leo. Praesent eleifend,ipsum a bibendum feugiat, massa ....</item>
    </string-array>

    <string-array name="NotifyToday_time">
        <item>07:30\nAM</item>
        <item>07:30\nAM</item>
        <item>07:30\nAM</item>
    </string-array>

    <string-array name="NotifyYesterday_time">
        <item>07:30\nAM</item>
        <item>07:30\nAM</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="home">Home</string>
    <string name="order">My Orders</string>
    <string name="offers">Offers</string>
    <string name="categories">Categories</string>
    <string name="notification">Notifications</string>
    <string name="logout">Logout</string>
    <string name="home_nav">Home</string>
    <string name="favorites">Favorites</string>
    <string name="orders">Orders</string>
    <string name="offers_nav">Offers</string>
    <string name="view_comments"><u>Give Rating &amp; Comments</u></string>
    <string name="OPrice"><strike>$200</strike></string>
</resources>