<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/g1">
        <item
            android:id="@+id/homeNav"
            android:title="@string/home"
            android:icon="@drawable/homemenu"/>
        <item
            android:id="@+id/orderNav"
            android:title="@string/order"
            android:icon="@drawable/ordermenu"/>
        <item
            android:id="@+id/profileNav"
            android:title="@string/offers"
            android:icon="@drawable/offersmenu"/>
        <item
            android:id="@+id/categoriesNav"
            android:title="@string/categories"
            android:icon="@drawable/categorymenu"/>
        <item
            android:id="@+id/notificationNav"
            android:title="@string/notification"
            android:icon="@drawable/notificationmenu"/>
        <item
            android:id="@+id/logoutNav"
            android:title="@string/logout"
            android:icon="@drawable/logoutmenu"/>
    </group>
</menu>