<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_category"
        android:icon="@drawable/category"
        android:title="@string/category_nav"/>

    <item
        android:id="@+id/bottom_nav_favorie"
        android:icon="@drawable/favorite"
        android:title="@string/favorites" />

    <item
        android:id="@+id/bottom_nav_orders"
        android:title="@string/orders"
        android:icon="@drawable/carbon_noodle_bowl"
        />

    <item
        android:id="@+id/bottom_nav_discount"
        android:title="@string/offers_nav"
        android:icon="@drawable/tabler_discount_2"
        />

    <item
        android:id="@+id/invisible"
        android:visible="false"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="invisible" />
</menu>