<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".activity.OTP">

    <ImageButton
        android:id="@+id/img_back_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/backarrow"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="276dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/OTP_Title"
        android:textColor="@color/OTP_title"
        android:textSize="@dimen/Login_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_variablefont_wght"
        android:textFontWeight="800"
        android:text="@string/OTP_subTitle"
        android:textColor="@color/Login_subTitle"
        android:textSize="@dimen/OTP_subTitle"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/otps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <EditText
                android:id="@+id/otp1"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:elevation="4dp"
                android:layout_margin="8dp"
                android:background="@drawable/custom_otp_edittext"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="26dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/otp2"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_margin="8dp"
                android:background="@drawable/custom_otp_edittext"
                android:elevation="4dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="26dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/otp1"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/otp3"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_margin="8dp"
                android:background="@drawable/custom_otp_edittext"
                android:elevation="4dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="26dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/otp2"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/otp4"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_margin="8dp"
                android:background="@drawable/custom_otp_edittext"
                android:elevation="4dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="26dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/otp3"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/otp5"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_margin="8dp"
                android:background="@drawable/custom_otp_edittext"
                android:elevation="4dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="26dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/otp4"
                app:layout_constraintTop_toTopOf="parent"
                />

            <EditText
                android:id="@+id/otp6"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_margin="8dp"
                android:background="@drawable/custom_otp_edittext"
                android:elevation="4dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="26dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/otp5"
                app:layout_constraintTop_toTopOf="parent"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/montserrat_variablefont_wght"
        android:text="@string/OTP_resend"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:textFontWeight="800"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit" />

    <Button
        android:id="@+id/submit"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button"
        android:elevation="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/OTP_submit"
        android:textAllCaps="false"
        android:textColor="@color/Button_txt"
        android:textSize="@dimen/Button_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otps" />

    <Button
        android:id="@+id/resend"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/OTP_Buttonresend"
        android:textAllCaps="false"
        android:textColor="@color/Button_txt"
        android:textSize="@dimen/Button_txt"
        android:textStyle="bold"
        android:visibility="gone"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>